WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
317214
REGRESSION(
315252@main
): [macOS] TestWebKitAPI.NowPlaying tests are constant crash
https://bugs.webkit.org/show_bug.cgi?id=317214
Summary
REGRESSION(315252@main): [macOS] TestWebKitAPI.NowPlaying tests are constant ...
Marta Darbinyan
Reported
2026-06-16 10:29:31 PDT
The tests are constantly crashing after
315252@main
. TestWebKitAPI.MediaSessionTest.MinimalCommands TestWebKitAPI.NowPlayingTest.VideoElementWithMutedAudio TestWebKitAPI.NowPlayingTest.VideoElementWithoutAudio TestWebKitAPI.NowPlayingTest.VideoElementWithoutAudioPlayWithUserGesture Test results:
https://ews-build.webkit.org/#/builders/18/builds/151565
Test history:
https://results.webkit.org/?suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&suite=api-tests&test=TestWebKitAPI.MediaSessionTest.MinimalCommands&test=TestWebKitAPI.NowPlayingTest.VideoElementWithMutedAudio&test=TestWebKitAPI.NowPlayingTest.VideoElementWithMutedAudioUnmutedWithUserGesture&test=TestWebKitAPI.NowPlayingTest.VideoElementWithoutAudio&test=TestWebKitAPI.NowPlayingTest.VideoElementWithoutAudioPlayWithUserGesture
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-06-16 10:29:47 PDT
<
rdar://problem/179836788
>
EWS
Comment 2
2026-06-16 10:59:44 PDT
Test gardening commit
315302@main
(c325b871eec8): <
https://commits.webkit.org/315302@main
> Reviewed commits have been landed. Closing PR #67266 and removing active labels.
Elliott Williams
Comment 3
2026-06-24 17:25:58 PDT
The caused-by moves around soft-linking macros for these two test classes, so that's likely the source of the problem.
EWS
Comment 4
2026-06-25 15:25:03 PDT
Committed
315850@main
(741027c10617): <
https://commits.webkit.org/315850@main
> Reviewed commits have been landed. Closing PR #67824 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug