REGRESSION(315252@main): [macOS] TestWebKitAPI.NowPlaying tests are constant crash https://bugs.webkit.org/show_bug.cgi?id=317214 rdar://179836788

Unreviewed test fix.

MediaRemote is a private framework, so it needs the private soft-linking
macro.

* TestExpectations/apitests:
* Tools/TestWebKitAPI/Helpers/cocoa/MediaRemoteSoftLink.mm:

Canonical link: https://commits.webkit.org/315850@main